Some progress with regards to positioning the elements and getting the camera to scroll. There are still some weird behaviors, though, such as a very large gap at the end of the exhibit and some scrolling sync issues with the text <> image

--- a/frontend/src/Components/User/Collections/AllCollections/styles/AllCollections.css
+++ b/frontend/src/Components/User/Collections/AllCollections/styles/AllCollections.css
@@ -16,8 +16,8 @@ h1 {
 }
 
 .viewer-section {
-    padding-top: 20rem;
-    padding-bottom: 4rem;
+    padding-block: 20rem;
+    /* padding-bottom: 4rem; */
     padding-left: 3rem;
     display: flex;
     flex-direction: column;
